[tool.poetry]
name = "algorithm-analysis"
version = "0.0.1"
description = "Introduction to Algorithms, with Python examples"
authors = ["Andy Rimmer <rimmera@elsevier.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.7"

[tool.poetry.dev-dependencies]
jupyter = "*"
seaborn = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
